fixed label wrapping in featured dest

--- a/app/static/less/styles.less
+++ b/app/static/less/styles.less
@@ -170,16 +170,12 @@ a:focus {
     text-align: center;
 }
 .label {
-    font-weight: 700;
-    line-height: 1;
     color: @teal;
-    text-align: center;
-    white-space: nowrap;
     padding: .3em .6em;
     border: 1px solid @teal;
     border-radius: 1em;
-    display: inline;
-    margin-right: 6px;
+    display: inline-block;
+    margin-top: 4px;
 
     &:hover {
         color: @teal !important;
